--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+# org.gradle.parallel=false
 
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
@@ -57,3 +57,12 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
+
+# Java 21 ZORUNLU - removeLast() metodu için gerekli
+# Java 21 kurulu değilse JAVA21-KURULUM.md dosyasına bakın
+# org.gradle.java.home=C:/Program Files/Java/jdk-21
+# Şimdilik Java 17 kullan (Java 21 kurulunca yukarıdaki satırın başındaki # işaretini kaldır)
+org.gradle.java.home=C:/Program Files/Java/jdk-17
+
+# react-native-view-pdf: Use working version of android-pdf-viewer
+pdfViewerVersion=3.2.0-beta.1
