--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "build:android": "cd android && gradlew.bat assembleRelease"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-blob-util": "^0.24.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "~3.31.1",
+    "react-native-screens": "~3.34.0",
     "react-native-sound": "^0.11.2",
     "react-native-sqlite-storage": "^6.0.1",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
